# ATextEditor_Enc

./: README.md
texteditor_qt_enc/: CMakeLists.txt  readme.txt
texteditor_qt_enc/src/: help.cpp  main.cpp
